<resources>
    <string name="app_name">DscFirebaseAuth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="password_reset_text">Enter your email address associated with your account to receive a link to reset your password</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="creation_account">Create Account</string>
    <string name="login_sucess">Login Successful</string>
    <string name="link_success">Check your email for a reset link</string>
    <string name="authenticating">Authenticating…</string>
    <string name="register_sucess">Registration Successful</string>
    <string name="creating">Creating Account…</string>
    <string name="fullname">%s %s</string>
</resources>