<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.register.RegisterFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_top_large">
        <ImageButton
            android:id="@+id/navBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_margin="@dimen/margin"
            android:background="@color/float_transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/navBack"
            app:layout_constraintBottom_toBottomOf="@id/navBack"
            android:text="@string/create_account"
            android:layout_margin="@dimen/margin"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Theme.DscFirebaseAuth.CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstnameLayout"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/navBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstname"
                android:inputType="text"
                android:hint="@string/first_name"
                android:drawablePadding="@dimen/drwable_padding"
                android:drawableStart="@drawable/ic_person"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Theme.DscFirebaseAuth.CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastnameLayout"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/firstnameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastname"
                android:inputType="text"
                android:hint="@string/last_name"
                android:drawablePadding="@dimen/drwable_padding"
                android:drawableStart="@drawable/ic_person"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Theme.DscFirebaseAuth.CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailLayout"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/lastnameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmail"
                android:hint="@string/email"
                android:drawablePadding="@dimen/drwable_padding"
                android:drawableStart="@drawable/ic_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordLayout"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="@id/emailLayout"
            app:layout_constraintEnd_toEndOf="@id/emailLayout"
            app:layout_constraintTop_toBottomOf="@id/emailLayout"
            style="@style/Theme.DscFirebaseAuth.CustomTextInputLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:drawablePadding="@dimen/drwable_padding"
                android:drawableStart="@drawable/ic_lock"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cLayout"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="@id/passwordLayout"
            app:layout_constraintEnd_toEndOf="@id/passwordLayout"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout"
            style="@style/Theme.DscFirebaseAuth.CustomTextInputLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:drawablePadding="@dimen/drwable_padding"
                android:drawableStart="@drawable/ic_lock"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            style="@style/Theme.DscFirebaseAuth.CustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/cLayout"
            app:layout_constraintStart_toStartOf="@id/passwordLayout"
            app:layout_constraintEnd_toEndOf="@id/cLayout"
            android:text="@string/creation_account"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_large"
            android:id="@+id/navToLogin"
            app:layout_constraintStart_toStartOf="@id/passwordLayout"
            app:layout_constraintEnd_toEndOf="@id/passwordLayout"
            app:layout_constraintTop_toBottomOf="@id/loginBtn"
            android:text="@string/already_have_an_account_login"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>