<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.reset_password.ResetPasswordFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_top_large">
        <ImageButton
            android:id="@+id/navBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_margin="@dimen/margin"
            android:background="@color/float_transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/navBack"
            app:layout_constraintBottom_toBottomOf="@id/navBack"
            android:text="@string/forgot_password_title"
            android:layout_margin="@dimen/margin"

            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/unlockLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:tint="@color/teal_700"
            android:src="@drawable/ic_ock_open"
            app:layout_constraintTop_toBottomOf="@id/navBack"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/reset_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/unlockLogo"
            app:layout_constraintEnd_toEndOf="@id/unlockLogo"
            app:layout_constraintTop_toBottomOf="@id/unlockLogo"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin"
            android:textAlignment="center"
            android:text="@string/password_reset_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailLayout"
            android:layout_margin="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reset_text"
            style="@style/Theme.DscFirebaseAuth.CustomTextInputLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/email"
                android:drawablePadding="@dimen/drwable_padding"
                android:drawableStart="@drawable/ic_email"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.DscFirebaseAuth.CustomButton"
            android:layout_margin="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/emailLayout"
            app:layout_constraintStart_toStartOf="@id/emailLayout"
            app:layout_constraintEnd_toEndOf="@id/emailLayout"
            android:text="@string/submit"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>