<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_top_large">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/logo"
            android:scaleType="fitXY"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Theme.DscFirebaseAuth.CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailLayout"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmail"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/email"
                android:drawablePadding="@dimen/drwable_padding"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordLayout"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="@id/emailLayout"
            app:layout_constraintEnd_toEndOf="@id/emailLayout"
            app:layout_constraintTop_toBottomOf="@id/emailLayout"
            style="@style/Theme.DscFirebaseAuth.CustomTextInputLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:id="@+id/password"
                android:drawablePadding="@dimen/drwable_padding"
                android:drawableStart="@drawable/ic_lock"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgotPasswordTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="@id/passwordLayout"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.DscFirebaseAuth.CustomButton"
            android:layout_margin="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/forgotPasswordTxt"
            app:layout_constraintStart_toStartOf="@id/passwordLayout"
            app:layout_constraintEnd_toEndOf="@id/forgotPasswordTxt"
            android:text="@string/login"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/navToRegister"
            android:layout_marginTop="@dimen/margin_top_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/passwordLayout"
            app:layout_constraintEnd_toEndOf="@id/passwordLayout"
            app:layout_constraintTop_toBottomOf="@id/loginBtn"
            android:text="@string/don_t_have_an_account_sign_up"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>